# yt-music-downloader-landing

./: .gitignore  CLAUDE.md  CONTEXT.md  FEATURES_DOCUMENTATION.md  README.md  context.md  eslint.config.mjs  markdownlint-solutions.md  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
.claude/commands/: context.md  doc-features.md
.github/workflows/: deploy.yml
YouTube Music Downloader Pro.app/Contents/: Info.plist
YouTube Music Downloader Pro.app/Contents/MacOS/: YouTube Music Downloader Pro
YouTube Music Downloader Pro.app/Contents/Resources/: app-update.yml  app.asar  icon.icns
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/billing/: page.tsx
src/app/dashboard/: page.tsx
src/app/pricing/: page.tsx
src/components/download/: download-form.tsx
src/components/features/: features-section.tsx
src/components/hero/: hero-section.tsx
src/components/layouts/: footer.tsx  navigation.tsx
src/hooks/: use-subscription.ts
src/lib/: protocol.ts  stripe-server.ts  stripe.ts  subscription.ts  user-subscription.ts
yt-music-downloader-app/tauri-project/: package-lock.json  package.json  tailwind.config.js
yt-music-downloader-app/tauri-project/src-tauri/: Cargo.toml  tauri.conf.json
yt-music-downloader-app/tauri-project/src-tauri/src/: lib.rs  main.rs
yt-music-downloader-electron/: package-lock.json  package.json
yt-music-downloader-electron/renderer/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
yt-music-downloader-electron/src/: main.js  preload.js
(+85 files in other folders)
